@@ -23,6 +23,7 @@
 #include "mud/server.h"
 #include "common/imanager.h"
 #include "common/gcbase.h"
+#include "common/strbuf.h"
 
 #include <vector>
 
@@ -86,50 +87,66 @@ class ISocketHandler : public GC {
 	public:
 	virtual ~ISocketHandler () {}
 
-	virtual void prepare () = 0;
-	virtual void in_ready () = 0;
-	virtual void out_ready () = 0;
-	virtual void hangup () = 0;
+	virtual void sock_flush () = 0;
+	virtual void sock_in_ready () = 0;
+	virtual void sock_out_ready () = 0;
+	virtual void sock_hangup () = 0;
 
-	virtual int get_sock () = 0;
-	virtual char get_poll_flags () = 0;
+	virtual int sock_get_fd () = 0;
+	virtual bool sock_is_out_waiting () = 0;
+	virtual bool sock_is_disconnect_waiting () = 0;
+	virtual void sock_complete_disconnect () = 0;
 };
 
 class SocketListener : public ISocketHandler {
 	public:
 	inline SocketListener (int s_sock) : sock(s_sock) {}
 
-	// must provide in_ready to accept() incoming connections
+	// sub_classes provide sock_in_ready to accept() incoming connections
 
-	virtual void prepare () {}
-	virtual void out_ready () {}
-	virtual void hangup () {}
+	virtual void sock_flush () {}
+	virtual void sock_out_ready () {}
+	virtual void sock_hangup () {}
 
-	virtual inline int get_sock () { return sock; }
-	virtual inline char get_poll_flags () { return POLLSYS_READ; }
+	virtual inline int sock_get_fd () { return sock; }
+	virtual bool sock_is_out_waiting () { return false; }
+	virtual bool sock_is_disconnect_waiting () { return false; }
+	virtual void sock_complete_disconnect () {}
 
 	protected:
 	int sock;
 };
 
-class SocketUser : public ISocketHandler {
+class SocketConnection : public ISocketHandler {
 	public:
-	inline SocketUser (int s_sock) : sock(s_sock) {}
+	SocketConnection (int s_sock);
 
 	// called with input
-	virtual void in_handle (char* buffer, size_t size) = 0;
-	// must implement:
-	//  void prepare ()
-	//  void out_ready ()
-	//  char get_poll_flags ()
-	//  void hangup ()
+	virtual void sock_input (char* buffer, size_t size) = 0;
 
-	virtual void in_ready ();
+	// sub-classes must implement:
+	//  void sock_flush ()
+	//  void sock_hangup ()
 
-	virtual inline int get_sock () { return sock; }
+	// request close
+	void sock_disconnect ();
 
-	protected:
+	// add data to the output buffer
+	void sock_buffer (const char* data, size_t size);
+
+	// internal
+	virtual void sock_in_ready ();
+	virtual void sock_out_ready ();
+	virtual int sock_get_fd () { return sock; }
+	virtual bool sock_is_out_waiting () { return !output.empty(); }
+	virtual bool sock_is_disconnect_waiting () { return disconnect; }
+	virtual void sock_complete_disconnect ();
+
+	private:
+	// FIXME: using this, we can't have any protocol with NULs, which happens in telnet (ZMP) !
+	StringBuffer output;
 	int sock;
+	bool disconnect;
 };
 
 class SNetworkManager : public IManager {
